--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>All Clear</title>
+    <link rel="stylesheet" href="styles/blogs.css">
 </head>
 <body>
-    
+    <div>
+        <h1>My first Repo</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti incidunt error repellendus sunt est perspiciatis perferendis commodi natus, accusamus placeat doloribus soluta veniam, asperiores voluptates cupiditate at quam? Optio, fugit.</p>
+    </div>
+
 </body>
 </html>
